--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "tsc -w",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "prettier": "prettier --config .prettierrc --write 'src/**/*.ts'"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.7",
     "@types/node": "^18.7.6",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
