--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
     "prettier": "prettier --config .prettierrc --write 'src/**/*.ts'"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.6",
+    "@types/supertest": "^2.0.12",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "supertest": "^6.2.4",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
